--- a/.gitignore
+++ b/.gitignore
@@ -5,17 +5,9 @@ build/
 !**/src/test/**/build/
 
 ### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
-*.iws
-*.iml
-*.ipr
-out/
-!**/src/main/**/out/
-!**/src/test/**/out/
 /.idea
+.idea/*
+.idea/
 
 ### Eclipse ###
 .apt_generated
